Kubernetes/Ingress/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: ingress-app-deployment
spec:
    replicas: 4
    template:
        metadata:
            labels:
              app: ingress-app
        spec:
           nodeSelector:
             node: worker1
           containers:
              - name: ingress-app
                image: shankaru/new_repo:v1
                ports:
                 - containerPort: 80
    selector:
        matchLabels:
           app: ingress-app           
---

apiVersion: v1
kind: Service
metadata:
   name: ingress-app-cluster-ip
spec:
   selector: 
       app: ingress-app
   ports: 
     - name: http
       port: 30002
       targetPort: 8080
