Kubernetes/Ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
  - host: ingress.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ingress-app-cluster-ip
            port:
              number: 30002
      - path: /name
        pathType: Prefix
        backend:
          service:
            name: ingress-app-cluster-ip
            port:
              number: 30002
